workspaces/DC Dev/DC Dev/src/objects/Bill__c.object
<CustomObject>
    <description>Holds information about the bills.</description>
    <fields>
        <fullName>Copies__c</fullName>
        <description>Number of copies sold.</description>
        <inlineHelpText>Enter the number of copies sold to the buyer.</inlineHelpText>
        <label>Copies</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides the customer information.</description>
        <inlineHelpText>Select customer ID.</inlineHelpText>
        <label>Customer Information</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Transaction__c</fullName>
        <description>Holds the date on which the transaction was made</description>
        <inlineHelpText>Enter the date of transaction.</inlineHelpText>
        <label>Date of Transaction</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Customer_Information__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points towards the the media sold.</description>
        <inlineHelpText>Select the media to be sold.</inlineHelpText>
        <label>Media Information</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer__c</fullName>
        <formula>Customer_Information__r.Name_of_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Calculates the total price of the bill.</description>
        <formula>Copies__c *  Media_Information__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will calculate the total for the bill automatically</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Bill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>